[metadata]
name = PyKMTools
version = 0.1.0
author = Kannmu
desciption-file = README.md
author_email = Kannmu@163.com
description = A data processing tool for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kannmu/PyKMTools
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    ffmpeg
